force-app/main/default/objects/ATM_ADM__c/ATM_ADM__c.object-meta.xml
<CustomObject>
    <label>ATM/ADM</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ATM/ADM Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATM/ADM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>