force-app/main/default/objects/ATM_ADM__c/fields/Address_TH__c.field-meta.xml
<CustomField>
    <fullName>Address_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address (TH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>