force-app/main/default/objects/ATM_ADM__c/fields/ATM_Type__c.field-meta.xml
<CustomField>
    <fullName>ATM_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ATM Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>