force-app/main/default/objects/ATM_ADM__c/fields/CCTV__c.field-meta.xml
<CustomField>
    <fullName>CCTV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCTV</label>
    <type>Checkbox</type>
</CustomField>