force-app/main/default/objects/ATM_ADM__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>