force-app/main/default/objects/ATM_ADM__c/fields/Enable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Enable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Flag</label>
    <type>Checkbox</type>
</CustomField>