force-app/main/default/objects/ATM_ADM__c/fields/Enddate__c.field-meta.xml
<CustomField>
    <fullName>Enddate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enddate</label>
    <type>Date</type>
</CustomField>