force-app/main/default/objects/ATM_ADM__c/fields/FC__c.field-meta.xml
<CustomField>
    <fullName>FC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>