force-app/main/default/objects/ATM_ADM__c/fields/Holiday_Close__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Close</label>
    <type>Checkbox</type>
</CustomField>