force-app/main/default/objects/ATM_ADM__c/fields/Location_Group__c.field-meta.xml
<CustomField>
    <fullName>Location_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>