force-app/main/default/objects/ATM_ADM__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile</label>
    <length>70</length>
    <type>Text</type>
</CustomField>