force-app/main/default/objects/ATM_ADM__c/fields/Openend__c.field-meta.xml
<CustomField>
    <fullName>Openend__c</fullName>
    <label>Openend</label>
    <type>Time</type>
</CustomField>