force-app/main/default/objects/ATM_ADM__c/fields/Openstart__c.field-meta.xml
<CustomField>
    <fullName>Openstart__c</fullName>
    <label>Openstart</label>
    <type>Time</type>
</CustomField>