force-app/main/default/objects/ATM_ADM__c/fields/Startdate__c.field-meta.xml
<CustomField>
    <fullName>Startdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Startdate</label>
    <type>Date</type>
</CustomField>