force-app/main/default/objects/ATM_ADM__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>