force-app/main/default/objects/ATM_ADM__c/fields/Ups__c.field-meta.xml
<CustomField>
    <fullName>Ups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ups</label>
    <type>Checkbox</type>
</CustomField>