force-app/main/default/objects/ATM_ADM__c/fields/Vendor_MA__c.field-meta.xml
<CustomField>
    <fullName>Vendor_MA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor MA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>