force-app/main/default/objects/ATM_ADM__c/fields/Vendor_Own__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Own__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Own</label>
    <length>50</length>
    <type>Text</type>
</CustomField>