force-app/main/default/objects/ATM_ADM__c/listViews/All_Active_ATM_ADM.listView-meta.xml
<ListView>
    <fullName>All_Active_ATM_ADM</fullName>
    <columns>NAME</columns>
    <columns>ATM_Type__c</columns>
    <columns>Location__c</columns>
    <columns>Address_TH__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enable_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active ATM/ADM</label>
    <language>en_US</language>
</ListView>